tests/error/typing01.py
#A type hint is conflicted
a: int = 0
a: str = '0'
